Fix the bad alignment

--- a/sass/tellulf.scss
+++ b/sass/tellulf.scss
@@ -38,7 +38,7 @@ clock,
 currentweather {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   height: 100%;
